--- a/ks.cfg
+++ b/ks.cfg
@@ -49,7 +49,10 @@ keyboard us
 # --device	device to be activated and / or configured with the network command
 # --bootproto	method to obtain networking configuration for device (default dhcp)
 # --noipv6	disable IPv6 on this device
-network --onboot yes --device eth0 --bootproto dhcp --noipv6
+#network --onboot yes --device eth0 --bootproto dhcp --noipv6
+network  --bootproto=static --device=eth0 --gateway=192.168.1.1 --ip=192.168.1.100 --nameserver=8.8.8.8 --netmask=255.255.255.0 --ipv6=auto --activate
+network  --hostname=centos7-template.daftcode.local
+
 
 # Set the system's root password (required)
 # Plaintext password is: server
