--- a/ks.cfg
+++ b/ks.cfg
@@ -27,7 +27,7 @@ install
 # Other possible / supported installation methods:
 # * install from the first CD-ROM/DVD drive on the system:
 #
-# cdrom
+cdrom
 #
 # * install from a directory of ISO images on a local drive:
 #
