--- a/ks.cfg
+++ b/ks.cfg
@@ -96,25 +96,25 @@ zerombr
 clearpart --linux --initlabel
 
 # Create primary system partitions (required for installs)
-part /boot --fstype=xfs --size=1024
+part /boot --fstype=ext2 --size=1024
 part pv.01 --grow --size=1
 
-# Create a Logical Volume Management (LVM) group (optional)
+# Create a Logical Volume Management (LVM) (optional)
 volgroup centos --pesize=4096 pv.01
 
 # Create particular logical volumes (optional)
-logvol / --fstype=xfs --name=root --vgname=centos --size=15360 --grow
+logvol / --fstype=ext4 --name=root --vgname=centos --size=15360 --grow
 # CCE-26557-9: Ensure /home Located On Separate Partition
-logvol /home --fstype=xfs --name=home --vgname=centos --size=4096 --fsoptions="nodev"
+logvol /home --fstype=ext4 --name=home --vgname=centos --size=4096 --fsoptions="nodev"
 # CCE-26435-8: Ensure /tmp Located On Separate Partition
-logvol /tmp --fstype=xfs --name=tmp --vgname=centos --size=2048 --fsoptions="nodev,noexec,nosuid"
+logvol /tmp --fstype=ext4 --name=tmp --vgname=centos --size=2048 --fsoptions="nodev,noexec,nosuid"
 # CCE-26639-5: Ensure /var Located On Separate Partition
-logvol /var --fstype=xfs --name=var --vgname=centos --size=2048 --fsoptions="nodev"
+logvol /var --fstype=ext4 --name=var --vgname=centos --size=2048 --fsoptions="nodev"
 # CCE-26215-4: Ensure /var/log Located On Separate Partition
-logvol /var/log --fstype=xfs --name=log --vgname=centos --size=2048 --fsoptions="nodev"
+logvol /var/log --fstype=ext4 --name=log --vgname=centos --size=2048 --fsoptions="nodev"
 # CCE-26436-6: Ensure /var/log/audit Located On Separate Partition
-logvol /var/log/audit --fstype=xfs --name=audit --vgname=centos --size=512 --fsoptions="nodev"
-logvol swap --name=lv_swap --vgname=VolGroup --size=2016
+logvol /var/log/audit --fstype=ext4 --name=audit --vgname=centos --size=512 --fsoptions="nodev"
+logvol swap --name=lv_swap --vgname=centos --size=2016
 
 %addon org_fedora_oscap
         content-type = scap-security-guide
@@ -124,15 +124,9 @@ logvol swap --name=lv_swap --vgname=VolGroup --size=2016
 # Packages selection (%packages section is required)
 %packages
 
-# Require 'Server with GUI' package environment to be installed
-@^Server with GUI
-
 # Install selected additional packages (required by PCI-DSS profile)
 # CCE-27024-9: Install AIDE
 aide
-
-# Install libreswan package
-libreswan
 
 %end # End of %packages section
 
